--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-PHRASE="<mnemonic>"
+PHRASE="<mnemonic>" # Add your hotkey seed phrase here
 LOCAL_RPC="ws://127.0.0.1:9944"
-DEV_RPC="ws://3.16.197.70:9945" #TODO: add array of RPC nodes
-LIVE_RPC="ws://" # Add your live rpc here
+DEV_RPC="wss://rpc.hypertensor.org:443"
+LIVE_RPC="ws://"
+PRIVATE_KEY_PATH="private_key.key" # add private key path from `cli.crypto.keygen`
